# StrategyGame

./: .gitignore  CMakeLists.txt  README.md
src/: army.cpp  army.hpp  building.cpp  building.hpp  gamestate.cpp  gamestate.hpp  main.cpp  player.cpp  player.hpp  playerAI.cpp  playerAI.hpp  selectable.hpp  tile.cpp  tile.hpp  townhall.cpp  townhall.hpp  ui.cpp  ui.hpp  uimanager.cpp  uimanager.hpp  utils.cpp  utils.hpp
src/maps/: example1.txt  grey.txt  saved_map.txt
src/ui/: mainmenu.cpp  mainmenu.hpp  mapeditor.cpp  mapeditor.hpp  victory_screen.cpp  victory_screen.hpp
tests/: readme.md  test_Army.cpp  test_Building.cpp  test_Player.cpp  test_Tile.cpp  test_Townhall.cpp
